i added images file

--- a/gridbasic.html
+++ b/gridbasic.html
@@ -36,7 +36,7 @@
       
       <div class="topnav">
         <a href="text.html">Text</a>
-        <a href="#news">News</a>
+        <a href="basictable.html">Table</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
       </div>
