i'm addibd jumbotron file

--- a/gridbasic.html
+++ b/gridbasic.html
@@ -37,7 +37,7 @@
       <div class="topnav">
         <a href="text.html">Text</a>
         <a href="basictable.html">Table</a>
-        <a href="#contact">Contact</a>
+        <a href="images.html">Images</a>
         <a href="#about">About</a>
       </div>
 
