i added the alert file

--- a/gridbasic.html
+++ b/gridbasic.html
@@ -38,7 +38,7 @@
         <a href="text.html">Text</a>
         <a href="basictable.html">Table</a>
         <a href="images.html">Images</a>
-        <a href="#about">About</a>
+        <a href="jumbotron.html">Jumboton</a>
       </div>
 
     <div class="navbar">
