i added the button file

--- a/gridbasic.html
+++ b/gridbasic.html
@@ -39,6 +39,10 @@
         <a href="basictable.html">Table</a>
         <a href="images.html">Images</a>
         <a href="jumbotron.html">Jumboton</a>
+        <a href="alert.html">Alerts</a>
+        <a href="basictable.html">Table</a>
+        <a href="images.html">Images</a>
+        <a href="jumbotron.html">Jumboton</a>
       </div>
 
     <div class="navbar">
